--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+*.dll
+*.exe
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -259,3 +261,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+#Unity
+*.meta
+ProjectSettings/
+Temp/
